// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 1.75rem;
  background-color: white;
}

.emotion-8:hover {
  background-color: #f3f5f8;
}

.emotion-8:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-11 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-11+label {
  font-size: 0.8125rem;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11::-moz-placeholder {
  color: transparent;
}

.emotion-11:-ms-input-placeholder {
  color: transparent;
}

.emotion-11::placeholder {
  color: transparent;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus+label,
.emotion-11:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-11"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Icons 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7+label {
  font-size: 0.9375rem;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-14 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-28 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-29 {
  width: 1.625rem;
  position: relative;
  height: 0.375rem;
}

.emotion-30 {
  position: absolute;
  left: 0.625rem;
  left: 0;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite linear alternate;
  animation: dotFlashing 0.7s infinite linear alternate;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.emotion-30::after,
.emotion-30::before {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.emotion-30::before {
  left: -0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.emotion-30::after {
  left: 0.625rem;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 0.3125rem;
  background-color: #bac6d9;
  color: #bac6d9;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-14"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-14"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-6"
            >
              <input
                className="emotion-7"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-8"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-14"
            >
              <div
                className="emotion-28"
              >
                <div
                  className="emotion-29"
                  data-testid="dots-loading"
                >
                  <div
                    className="emotion-30"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #5f6c85;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-7 path {
  fill: #5f6c85;
}

.emotion-8 {
  width: 100%;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-9+label {
  font-size: 0.9375rem;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9::-moz-placeholder {
  color: transparent;
}

.emotion-9:-ms-input-placeholder {
  color: transparent;
}

.emotion-9::placeholder {
  color: transparent;
}

.emotion-9:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-9:focus+label,
.emotion-9:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-10 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-11 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-18 {
  fill: #f5781b;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-18 path {
  fill: #f5781b;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-10"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-11"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-18"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-10"
              >
                Label
                 
              </label>
            </div>
            <div
              className="emotion-11"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-18"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with and without Label 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-11 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-11+label {
  font-size: 0.9375rem;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-11::-moz-placeholder {
  color: #5f6c85;
}

.emotion-11:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-11::placeholder {
  color: #5f6c85;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus+label,
.emotion-11:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

.emotion-15 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-15+label {
  font-size: 0.9375rem;
}

.emotion-15:focus {
  outline: none;
}

.emotion-15::-webkit-input-placeholder {
  color: transparent;
}

.emotion-15::-moz-placeholder {
  color: transparent;
}

.emotion-15:-ms-input-placeholder {
  color: transparent;
}

.emotion-15::placeholder {
  color: transparent;
}

.emotion-15:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-15:focus+label,
.emotion-15:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-11"
                disabled={false}
                placeholder="Placeholder "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-15"
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6+label {
  font-size: 0.9375rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <input
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="emotion-7"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7+label {
  font-size: 0.9375rem;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #5f6c85;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: not-allowed;
  min-width: 9.375rem;
  height: 1.75rem;
  background-color: white;
}

.emotion-29:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-32 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.8125rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-32+label {
  font-size: 0.8125rem;
}

.emotion-32:focus {
  outline: none;
}

.emotion-32::-webkit-input-placeholder {
  color: transparent;
}

.emotion-32::-moz-placeholder {
  color: transparent;
}

.emotion-32:-ms-input-placeholder {
  color: transparent;
}

.emotion-32::placeholder {
  color: transparent;
}

.emotion-32:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-32:focus+label,
.emotion-32:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-32:disabled {
  cursor: not-allowed;
}

.emotion-36 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-36 path {
  fill: #5f6c85;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-29"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-32"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-36"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-29"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-32"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-36"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-29"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-32"
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-36"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #e51460;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-4:hover {
  background-color: #f3f5f8;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #e51460;
  background-color: #e7ebf2;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7+label {
  font-size: 0.9375rem;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #e51460;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-9 svg {
  padding: 0 0.125rem;
}

.emotion-9 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #FF176B;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-11 path {
  fill: #FF176B;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  min-width: 9.375rem;
  height: 2.875rem;
  background-color: white;
}

.emotion-21:hover {
  background-color: #f3f5f8;
}

.emotion-21:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-25 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  line-height: normal;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  font-size: 1rem;
  font-weight: 400;
  color: #5f6c85;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  margin: auto;
  white-space: nowrap;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #5f6c85;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-26 svg {
  padding: 0 0.125rem;
}

.emotion-26 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-28 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-28 path {
  fill: #5f6c85;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-8"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-9"
              data-testid="error"
            >
              <span
                className="emotion-10"
                onClick={[Function]}
              >
                <span
                  className="emotion-11"
                />
              </span>
              Error in Text Field
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <input
                      className="emotion-7"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-8"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="emotion-9"
                data-testid="error"
              >
                <span
                  className="emotion-10"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-11"
                  />
                </span>
                Big Error Message for fixed width TextField to see icon alignment: Error Error Error Error Error Error Error Error Error Error Error
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              className="emotion-21"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <input
                    className="emotion-7"
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    className="emotion-25"
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
            <div
              className="emotion-26"
              data-testid="error"
            >
              <span
                className="emotion-10"
                onClick={[Function]}
              >
                <span
                  className="emotion-28"
                />
              </span>
              Error in Text Field
            </div>
          </div>
          <div
            style={
              Object {
                "margin": 5,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="emotion-21"
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <input
                      className="emotion-7"
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      className="emotion-25"
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="emotion-26"
                data-testid="error"
              >
                <span
                  className="emotion-10"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-28"
                  />
                </span>
                Big Hint Message for fixed width TextField to see icon alignment: Hint Hint Hint Hint Hint Hint Hint Hint Hint Hint
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with prefix/suffix 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  height: 2.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  z-index: 1;
  font-size: 0.9375rem;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7+label {
  font-size: 0.9375rem;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-12 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: 0.5rem;
  margin-right: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "80px",
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  $
                </div>
              </div>
              <div
                className="emotion-6"
              >
                <input
                  className="emotion-7"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "80px",
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-6"
              >
                <input
                  className="emotion-7"
                  disabled={false}
                  required={false}
                />
              </div>
              <div
                className="emotion-12"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "width": "120px",
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  $
                </div>
              </div>
              <div
                className="emotion-6"
              >
                <input
                  className="emotion-7"
                  disabled={false}
                  required={false}
                />
              </div>
              <div
                className="emotion-12"
              >
                <div
                  style={
                    Object {
                      "color": "gray",
                    }
                  }
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
